main_svc fix v.01