@@ -1,7 +1,7 @@
 package ru.practicum.category.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.category.dto.CategoryDto;
@@ -14,7 +14,6 @@ import ru.practicum.exception.ConflictException;
 import ru.practicum.exception.NotFoundException;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +38,7 @@ public class CategoryServiceImpl implements CategoryService {
         if (categoryRepository.countByName(name, categoryId) > 0) {
             throw new ConflictException(String.format("Category with name: %s already exist.", name));
         }
-        Category category = getById(categoryId);
+        Category category = getCategoryById(categoryId);
         category.setName(name);
         return CategoryMapper.toCategoryDto(categoryRepository.save(category));
     }
@@ -47,7 +46,7 @@ public class CategoryServiceImpl implements CategoryService {
     @Transactional
     @Override
     public void delete(Long id) {
-        Category category = getById(id);
+        Category category = getCategoryById(id);
         if (eventRepository.existsByCategory(category)) {
             throw new ConflictException(String.format(
                     "Cannot delete a category with id: %s. There are events related to this category.", id));
@@ -56,19 +55,19 @@ public class CategoryServiceImpl implements CategoryService {
     }
 
     @Override
-    public Collection<CategoryDto> getAll(Pageable page) {
-        return categoryRepository.findAll(page).stream()
-                .map(CategoryMapper::toCategoryDto)
-                .collect(Collectors.toList());
+    public Collection<CategoryDto> getAllCategory(Integer from,Integer size) {
+        PageRequest page = PageRequest.of(from, size);
+        return CategoryMapper.toListCategoryDto(categoryRepository.findAll(page).toList());
     }
 
     @Override
-    public CategoryDto getCategoryById(Long id) {
-        return CategoryMapper.toCategoryDto(getById(id));
+    public Category getCategoryById(Long categoryId) {
+        return categoryRepository.findById(categoryId).orElseThrow(()
+                -> new NotFoundException(String.format("Category with id: %d is not exists!", categoryId)));
     }
 
-    private Category getById(Long id) {
-        return categoryRepository.findById(id).orElseThrow(() ->
-                new NotFoundException(String.format("Category with id: %s not found.", id)));
+    @Override
+    public CategoryDto getCategoryDtoById(Long id) {
+        return CategoryMapper.toCategoryDto(getCategoryById(id));
     }
 }
