@@ -7,6 +7,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.exception.NotFoundException;
 import ru.practicum.user.dto.NewUserRequest;
 import ru.practicum.user.dto.UserDto;
 import ru.practicum.user.mapper.UserMapper;
@@ -14,7 +15,6 @@ import ru.practicum.user.model.User;
 import ru.practicum.user.repository.UserRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -41,14 +41,10 @@ public class UserServiceImpl implements UserService {
         Pageable pageable = PageRequest.of(from, size);
         if (userIds == null) {
             log.info("Get all users");
-            return userRepository.findAll(pageable).stream()
-                    .map(UserMapper::toUserDto)
-                    .collect(Collectors.toList());
+            return UserMapper.toListUserDto(userRepository.findAll(pageable).toList());
         } else {
             log.info("Get users by ids: {}", userIds);
-            return userRepository.findByIdIn(userIds, pageable).stream()
-                    .map(UserMapper::toUserDto)
-                    .collect(Collectors.toList());
+            return UserMapper.toListUserDto(userRepository.findByIdIn(userIds, pageable));
         }
     }
 
@@ -56,6 +52,11 @@ public class UserServiceImpl implements UserService {
     @Transactional
     public void delete(Long id) {
         log.info("Delete user with id:{} ", id);
-        userRepository.delete(userRepository.getUserById(id));
+        userRepository.delete(getUserById(id));
+    }
+
+    private User getUserById(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException(String.format("User with id: %s not exist!", userId)));
     }
 }
